...

      const response = await updateRecipe(token, recipe.recipe_id, updateData);

      console.log(updateData.ingredients);

      if (response) {
        Alert.alert('Success', 'Recipe updated successfully');
        triggerUpdate();
        navigation.goBack();
      }
    } catch (error) {
      console.error('Error updating recipe:', error);
      Alert.alert(
...
                      inputContainerStyle={styles.inputContainer}
                      onBlur={onBlur}
                      onChangeText={onChange}
                      value={value}
                      autoCapitalize="sentences"
                      errorMessage={errors.title?.message}
                      testID="title-input"
                    />
                  )}
                  name="title"
                />

                <Text style={styles.text}>Ingredients</Text>
...
                        value={value}
                        errorMessage={errors.instructions?.message}
                        multiline={true}
                        numberOfLines={10}
                        textAlignVertical="top"
                        autoCapitalize="sentences"
                        testID="instructions-input"
                        maxLength={4000}
                      />
                      <Text style={styles.counterText}>
                        {instructionsLength < 20
                          ? `${instructionsLength}/20 (${20 - instructionsLength} more needed)`
                          : `${instructionsLength}/1000`}
...
                            onChange(numericValue);
                          }}
                          value={value?.toString() || ''}
                          keyboardType="numeric"
                          autoCapitalize="none"
                          errorMessage={errors.cooking_time?.message}
                          testID="time-input"
                        />
                      )}
                      name="cooking_time"
                    />
                  </View>
                  <View style={{flex: 1}}>
...
                            onChange(numericValue);
                          }}
                          value={value?.toString() || ''}
                          keyboardType="numeric"
                          autoCapitalize="none"
                          errorMessage={errors.portions?.message}
                          testID="portions-input"
                        />
                      )}
                      name="portions"
                    />
                  </View>
                  <View style={{flex: 1}}>
...
                  ]}
                  titleStyle={styles.buttonTitle}
                  containerStyle={styles.buttonContainer}
                  onPress={handleSubmit(doEditRecipe)}
                  loading={loading}
                  disabled={!isValid || loading}
                  testID="save-changes-button"
                />
              </>
            ),
          },
        ]}
        keyExtractor={(_, index) => `key-${index}`}
...
