...

  return (
    <Card containerStyle={styles.card}>
      <Pressable
        onPress={() => {
          if (user?.user_id === item.user_id) {
            navigation.navigate('Profile');
          } else {
            navigation.navigate('User Profile', {
              user_id: item.user_id,
              navigation,
            });
          }
...

        {user &&
          (user.user_id === item.user_id || user.user_level_id === 1) && (
            <TouchableOpacity
              style={styles.menuButton}
              onPress={toggleRecipeOverlay}
              testID="recipe-overlay"
            >
              <Ionicons
                name="ellipsis-vertical"
                size={20}
                color={HexColors['dark-grey']}
              />
...
              <Ionicons
                name="create-outline"
                size={24}
                color={HexColors['dark-grey']}
                style={{width: 30}}
              />
              <Text style={styles.overlayText} testID="edit-recipe-button">
                Edit Recipe
              </Text>
            </TouchableOpacity>

            <TouchableOpacity
              style={styles.overlayItem}
...
            {item.title}{' '}
            <Text style={styles.cookingTime}>({item.cooking_time}min)</Text>
          </Text>
          <TouchableOpacity
            onPress={handleLikePress}
            style={styles.iconButton}
            testID="like-button"
          >
            <Ionicons
              name={isLiked ? 'heart' : 'heart-outline'}
              size={24}
              color={
                isLiked ? HexColors['darkest-green'] : HexColors['dark-grey']
              }
            />
            <Text
              testID="like-count"
              style={[
                styles.likeCount,
                isLiked && {
                  color: HexColors['darkest-green'],
                  fontWeight: 'bold',
                },
...
          buttonStyle={
            isFavorite ? styles.removeFavoriteButton : styles.favoriteButton
          }
          titleStyle={styles.favoriteButtonText}
          containerStyle={styles.buttonContainer}
          onPress={handleAddToFavorite}
          testID="add-favorite-button"
        />
        <Button
          title="Open"
          testID="view-recipe"
          buttonStyle={styles.openButton}
          titleStyle={styles.openButtonText}
          containerStyle={styles.buttonContainer}
          onPress={() => navigation.navigate('Recipe', {item})}
        />
      </View>
...
