...
  handleAutoLogin: () => void;
  setUpdatedUser: (updatedUser: UserWithDietaryInfo) => void;
};

type NavigatorType = {
  // tab screen
  Home: undefined;
  Post: undefined;
  Favorites: undefined;
  Profile: undefined;
  Upload: undefined;
  Weedify: undefined;
  // stack screen
  Back: undefined;
  'Edit Profile': undefined;
...
