...
  return (
    <>
      {user ? (
        <View style={styles.container}>
          <TextInput
            ref={inputRef}
            testID="comment-input"
            placeholder="Write a comment..."
            placeholderTextColor={HexColors['almost-white']}
            style={styles.commentInput}
            onChangeText={(text) => handleInputChange('comment_text', text)}
          />
          <TouchableOpacity onPress={handleSubmit} style={styles.commentSubmit} testID="do-comment">
            <Text style={styles.commentButtonText}>
              Comment
            </Text>
          </TouchableOpacity>
        </View>
      ) : (
...
