...
                  <Button
                    title="View"
                    buttonStyle={styles.openButton}
                    titleStyle={styles.openButtonText}
                    containerStyle={styles.buttonContainer}
                    onPress={() => navigation.navigate('Recipe', {item})}
                    testID="view-recipe"
                  />
                </ListItem.Content>
              </ListItem>
            </Card>
          )}
          contentContainerStyle={styles.listContainer}
...
