...

      await postRating(item.recipe_id, ratingValue, reviewText, token);

      // reload ratings and update user rating status
      loadRatings();
      setUserHasRated(true);
      Alert.alert('Success', 'Your rating has been submitted!');
    } catch (error) {
      console.error('Error submitting rating:', error);
      Alert.alert('Error', 'Failed to submit rating');
    }
  };

...

      await deleteRating(rating_id, token);

      // reload ratings and update user rating status
      loadRatings();
      setUserHasRated(false);
      Alert.alert('Success', 'Rating has been deleted');
    } catch (error) {
      console.error('Error deleting rating:', error);
      Alert.alert('Error', 'Failed to delete rating');
    }
  };

...
            />
            {user ? (
              <Button
                title={
                  userHasRated ? "You've rated this recipe" : 'Rate this recipe'
                }
                testID="add-rating-button"
                buttonStyle={styles.rateButton}
                disabled={userHasRated}
                onPress={() => setShowRatingForm(true)}
              />
            ) : (
              <Text
...
