appId: com.ellinoorariskala.weedifyfrontend
---
# Login first
- launchApp
- tapOn: 'Weedify'
- tapOn:
    id: 'email-input'
- inputText: 'elli@00.com'
- tapOn:
    id: 'password-input'
- inputText: 'ellinoora00'
- tapOn:
    id: 'login-button'
- assertVisible: 'Home'

# Navigate to a recipe
- scrollUntilVisible:
    element:
      id: 'view-recipe'
    direction: DOWN
- tapOn:
    id: 'view-recipe'

- scrollUntilVisible:
    element:
      id: 'show-comments'
    direction: DOWN
- tapOn:
    id: 'show-comments'
- tapOn:
    id: 'comment-input'
- inputText: 'This recipe looks amazing! I will try it this weekend.'
- tapOn:
    id: 'do-comment'
- takeScreenshot: 'Comment added successfully'
